# mbt_rs

./: .gitignore  README.md  TODO.md  justfile  moon.mod.json
.github/workflows/: ci.yml
fixtures/: expected.rs  generated_test.mbt  input.mbt  input.rs
fixtures/real_projects/: calculator.mbt  calculator.rs  hex_moonbit.mbt  linear_map.mbt  quality_test.rs  stack.mbt  stack.rs
fixtures/rust_verify/: Cargo.toml
fixtures/rust_verify/src/: lib.rs
mbt2rs/: constant.mbt  expr.mbt  pkg.generated.mbti  printer.mbt  printer_test.mbt  type.mbt
mbt2rs/src/: mapping.mbt  moon.pkg  pattern.mbt  pkg.generated.mbti  printer.mbt  printer_test.mbt  roundtrip_test.mbt
rs2mbt/: Cargo.toml
rs2mbt/src/: lib.rs  main.rs  mapping.rs  printer.rs  roundtrip.rs  tests.rs
