[package]
name = "rs2mbt"
version = "0.3.0"
edition = "2024"
description = "Rust to MoonBit transpiler"
license = "MIT"
repository = "https://github.com/mizchi/mbt_rs"
readme = "../README.md"
keywords = ["moonbit", "transpiler", "rust"]
categories = ["development-tools"]

[[bin]]
name = "rs2mbt"
path = "src/main.rs"

[lib]
name = "rs2mbt"
path = "src/lib.rs"

[dependencies]
syn = { version = "2", features = ["full", "visit"] }
quote = "1"
proc-macro2 = "1"
